--- a/Unidad 6/03 scripts/6.4 Machine Learning Adidas data set.ipynb
+++ b/Unidad 6/03 scripts/6.4 Machine Learning Adidas data set.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "3be69e0e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6c41245c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "75d9e6a3",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b6de16cb",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "[9644 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,12 +331,12 @@
    "id": "ad32c445",
    "metadata": {},
    "source": [
-    "3. Data prep for regression analysis"
+    "### 3. Data prep for regression analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "58291b93",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e00c22ef",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "176908a4",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "       [  83]], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "39ea1795",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "       [29]], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "99e6e93a",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "c1dce756",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "c5c4b205",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "152b3a5d",
    "metadata": {},
    "outputs": [],
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "9c41fadb",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "2c647099",
    "metadata": {},
    "outputs": [
@@ -590,9 +590,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slope: [[0.01857642]]\n",
-      "Mean squared error:  197.28126212863026\n",
-      "R2 score:  0.06434470285051896\n"
+      "Slope: [[0.01857642]]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'rmse' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_2300\\1432733484.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Slope:'\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mregression\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Mean squared error: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrmse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'R2 score: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rmse' is not defined"
      ]
     }
    ],
@@ -622,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "8aa39dd4",
    "metadata": {},
    "outputs": [
@@ -638,7 +647,7 @@
        "       [41.51815511]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "98e9dfef",
    "metadata": {},
    "outputs": [
@@ -875,7 +884,7 @@
        "29      42  41.703919"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,30 +905,6 @@
     "### Include any reflections you have on the impact of possible data bias.\n",
     "The model does not fit reality. This may be because the sample is too small, or we have too many autliers. Or we need to do another type of regression that is not linear."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd437a24",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcbc5e9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fc31499",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
